# geo-adjacency

./: .buildinfo  .gitignore  .pylintrc  Examples.html  Install.html  LICENSE  Methodology.html  Modules.html  Quickstart.html  README.md  genindex.html  geo_adjacency.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: Examples.doctree  Install.doctree  Methodology.doctree  Modules.doctree  Quickstart.doctree  environment.pickle  geo_adjacency.doctree  index.doctree  modules.doctree
.github/workflows/: documentation.yml  publish-to-pypi.yml  pylint.yml  pytest.yml  python-package.yml
Example/: README.md  example.py
Example/data/: Buildings.geojson  Parks.geojson  Roads.geojson
_build/: .buildinfo  genindex.html  objects.inv  searchindex.js
_build/.doctrees/: Install.doctree  environment.pickle
_sources/: Examples.rst.txt  Methodology.rst.txt  geo_adjacency.rst.txt
doc/: Example.rst  Examples.rst  Install.rst  Methodology.rst  Modules.rst  Quickstart.rst  conf.py  index.rst
docs/: Install.rst  Methodology.rst  Quickstart.rst  conf.py  index.rst
docs/_build/doctrees/: Quickstart.doctree  environment.pickle  index.doctree
docs/_build/html/: Install.html  Quickstart.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: Quickstart.rst.txt  index.rst.txt
docs/source/: index.rst
geo_adjacency/: adjacency.py  exception.py  utils.py
geo_adjacency/tests/: test_adjacency_engine.py  utils.py
geo_adjacency/tests/sample_data/: obstacle.csv
junit/: test-results.xml
tests/: .coverage  TestAdjacencyEngine.py  conftest.py  testUtils.py  test_adjacency_engine.py  test_feature.py  test_utils.py
tests/.pytest_cache/v/cache/: nodeids
tests/sample_data/: obstacle.csv  sample_map.qgz  source.csv  target.csv  wkts.py
