[tool.poetry]
name = "geo-adjacency"
version = "1.0.6"
description = ""
authors = ["Andrew Smyth <andrews@zillowgroup.com>"]
readme = "README.md"
packages = [{include = "geo_adjacency"}]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
scipy = "^1.11.3"
shapely = "^2.0.2"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
setuptools = "^69.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
