[tool.poetry]
name = "geo-adjacency"
version = "1.1.1"
description = "A package to determine which geometries are adjacent to each other, accounting for obstacles and gaps between features."
authors = ["Andrew Smyth <andrew.j.smyth.89@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_adjacency"}]
license = "MIT"
repository = "https://github.com/andrewsmyth/geo-adjacency"
homepage = "https://asmyth01.github.io/geo-adjacency/"
documentation = "https://asmyth01.github.io/geo-adjacency/"
keywords = ["voronoi", "adjacency", "geospatial", "geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
scipy = "^1.11.3"
shapely = "^2.0.2"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
setuptools = "^69.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
